Bug 1071754 - Filter to move messages to IMAP folder on getting new mail doesn't work unless Filter after Junk Classification is selected. r=rkent, a=mkmelin